# ja-speech-llm

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  asr.md  demo2_ja.py  eval_jsut.py  finetune_lora.py  gradio_demo.py  infer_test.py  note.md  note_v2.md  pyproject.toml  requirements.txt  test_context.py  tmp.py
eval_results/: metric.jsonl  predictions.model-LlamaForSpeechLM-ja-20260110-221600.dataset-ja_asr.jsut_basic5000.config-None.split-test.csv  predictions.model-LlamaForSpeechLM-ja-20260114-215708-step110000.dataset-ja_asr.common_voice_8_0.config-None.split-test.csv  predictions.model-LlamaForSpeechLM-ja-20260114-215708-step110000.dataset-ja_asr.reazonspeech_test.config-None.split-test.csv  predictions.model-LlamaForSpeechLM-ja-Full-20260115-224911-step155000.dataset-ja_asr.common_voice_8_0.config-None.split-test.csv  predictions.model-LlamaForSpeechLM-ja-Full-20260115-224911-step155000.dataset-ja_asr.jsut_basic5000.config-None.split-test.csv  predictions.model-LlamaForSpeechLM-ja-Full-20260115-224911-step155000.dataset-ja_asr.reazonspeech_test.config-None.split-test.csv  predictions.model-LlamaForSpeechLM-ja-Full-20260115-224911-step200000.dataset-ja_asr.common_voice_8_0.config-None.split-test.csv  predictions.model-LlamaForSpeechLM-ja-Full-20260115-224911-step200000.dataset-ja_asr.jsut_basic5000.config-None.split-test.csv  predictions.model-LlamaForSpeechLM-ja-Full-20260115-224911-step200000.dataset-ja_asr.reazonspeech_test.config-None.split-test.csv  predictions.model-LlamaForSpeechLM-ja-Full-20260115-224911-step225000.dataset-ja_asr.common_voice_8_0.config-None.split-test.csv  (+2 more)
incl_licenses/: demo1.ipynb
scripts/: dpo_8gpu_ja.sh  dpo_full_8gpu_ja.sh  dpo_ja.sh  finetune_adapter_ja.sh  (+6 more)
(+33 files in other folders)
